Bug 41647 - ASSERT that we're processing the correct type of token
Summary: ASSERT that we're processing the correct type of token
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-05 21:46 PDT by Adam Barth
Modified: 2010-07-05 22:57 PDT (History)
2 users (show)

See Also:


Attachments
Patch (4.76 KB, patch)
2010-07-05 21:47 PDT, Adam Barth
commit-queue: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-07-05 21:46:35 PDT
ASSERT that we're processing the correct type of token
Comment 1 Adam Barth 2010-07-05 21:47:36 PDT
Created attachment 60584 [details]
Patch
Comment 2 Adam Barth 2010-07-05 22:38:47 PDT
Comment on attachment 60584 [details]
Patch

Clearing flags on attachment: 60584

Committed r62522: <http://trac.webkit.org/changeset/62522>
Comment 3 Adam Barth 2010-07-05 22:38:51 PDT
All reviewed patches have been landed.  Closing bug.
Comment 4 WebKit Commit Bot 2010-07-05 22:57:50 PDT
Comment on attachment 60584 [details]
Patch

Rejecting patch 60584 from commit-queue.

Unexpected failure when processing patch!  Please file a bug against webkit-patch.
Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 60584, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1
Last 500 characters of output:
cgi?id=60584&action=edit
Fetching: https://bugs.webkit.org/show_bug.cgi?id=41647&ctype=xml
Processing 1 patch from 1 bug.
Cleaning working directory
Processing patch 60584 from bug 41647.
NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py.
ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).